--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Welcome to Yavuz Mollahamzaoglu's portfolio"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/brandlogo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/brandlogo.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
